creating layers: db, dal, domain, bll, ui

--- a/Ocean.Inside.Project/Views/Home/Index.cshtml
+++ b/Ocean.Inside.Project/Views/Home/Index.cshtml
@@ -2,15 +2,15 @@
     <section class="section-80 section-md-top-70 bg-wild-wand">
         <div class="shell">
             <div>
-                <h3>Hot Tours</h3>
+                <h3>Горячие Туры</h3>
             </div>
             <div class="offset-top-10">
-                <p>Check out our top-rated tours</p>
+                <p>Наши самые лучше предложения</p>
             </div>
             <div class="range range-xs-center offset-top-45">
                 <div class="cell-sm-5 cell-md-4">
                     <div data-wow-delay=".2s" class="box-offer wow fadeInLeft">
-                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/box-offer-01-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/Home/box-offer-01-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                         <div class="box-offer-caption text-left">
                             <div class="pull-left">
                                 <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">Italy</a></div>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="cell-sm-5 cell-md-4 offset-top-30 offset-sm-top-0">
                     <div data-wow-delay=".2s" class="box-offer wow bounceIn">
-                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/box-offer-02-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/Home/box-offer-02-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                         <div class="box-offer-caption text-left">
                             <div class="pull-left">
                                 <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">Thailand</a></div>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="cell-sm-5 cell-md-4 offset-top-30 offset-md-top-0">
                     <div data-wow-delay=".2s" class="box-offer wow fadeInRight">
-                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/box-offer-03-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/Home/box-offer-03-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                         <div class="box-offer-caption text-left">
                             <div class="pull-left">
                                 <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">France</a></div>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="cell-sm-5 cell-md-4 offset-top-30">
                     <div data-wow-delay=".2s" class="box-offer wow fadeInLeft">
-                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/box-offer-04-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/Home/box-offer-04-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                         <div class="box-offer-caption text-left">
                             <div class="pull-left">
                                 <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">England</a></div>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="cell-sm-5 cell-md-4 offset-top-30">
                     <div data-wow-delay=".2s" class="box-offer wow bounceIn">
-                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/box-offer-05-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/Home/box-offer-05-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                         <div class="box-offer-caption text-left">
                             <div class="pull-left">
                                 <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">Turkey</a></div>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="cell-sm-5 cell-md-4 offset-top-30">
                     <div data-wow-delay=".2s" class="box-offer wow fadeInRight">
-                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="images/box-offer-06-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
+                        <div class="box-offer-img-wrap"><a href="tours-single.html"><img src="/images/Home/box-offer-06-370x310.jpg" width="370" height="310" alt="" class="img-responsive center-block"></a></div>
                         <div class="box-offer-caption text-left">
                             <div class="pull-left">
                                 <div class="box-offer-title text-ubold"><a href="tours-single.html" class="text-gray-base">United States</a></div>
@@ -134,7 +134,7 @@
     </section>
     <section data-wow-delay=".2s" class="wow fadeIn section-parallax">
         <div data-on="false" data-md-on="true" class="rd-parallax">
-            <div data-speed="0.25" data-type="media" data-url="/images/background-05-1920x900.jpg" class="rd-parallax-layer"></div>
+            <div data-speed="0.25" data-type="media" data-url="/images/Home/background-05-1920x900.jpg" class="rd-parallax-layer"></div>
             <div data-speed="0" data-type="html" data-md-fade="false" class="rd-parallax-layer">
                 <div class="bg-overlay-inverse-md-darker">
                     <div class="shell section-80 section-md-top-70">
@@ -144,7 +144,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="images/icon-11-20x18.png" width="20" height="18" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-11-20x18.png" width="20" height="18" alt="" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -161,7 +161,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="images/icon-06-14x21.png" width="14" height="21" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-06-14x21.png" width="14" height="21" alt="" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -178,7 +178,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="images/icon-07-21x18.png" width="21" height="18" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-07-21x18.png" width="21" height="18" alt="" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -195,7 +195,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="images/icon-08-17x19.png" width="17" height="19" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-08-17x19.png" width="17" height="19" alt="" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -212,7 +212,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="images/icon-09-20x20.png" width="20" height="20" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-09-20x20.png" width="20" height="20" alt="" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -229,7 +229,7 @@
                                 <div class="box box-sm bg-white reveal-lg-block">
                                     <div class="unit unit-xs unit-xs-horizontal unit-spacing-sm">
                                         <div class="unit-left">
-                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="images/icon-10-25x24.png" width="25" height="24" alt="" class="img-responsive center-block"></div>
+                                            <div class="icon-circle icon-circle-lg icon-filled-turquoise center-block"><img src="/images/Home/icon-10-25x24.png" width="25" height="24" alt="" class="img-responsive center-block"></div>
                                         </div>
                                         <div class="unit-body offset-top-4 offset-xs-top-0">
                                             <div>
@@ -261,7 +261,7 @@
                     <div data-items="1" data-sm-items="2" data-lg-items="3" data-stage-padding="5" data-loop="false" data-margin="30" data-mouse-drag="false" data-dots="true" data-nav="true" class="owl-carousel owl-dots-primary">
                         <div class="owl-item">
                             <div class="team-member">
-                                <div class="team-member-img-wrap"><img src="/images/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                                <div class="team-member-img-wrap"><img src="/images/Home/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
                                 <div class="team-member-body">
                                     <div class="offset-top-20">
                                         <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Lisa Evans</div>
@@ -277,7 +277,7 @@
                         </div>
                         <div class="owl-item">
                             <div class="team-member">
-                                <div class="team-member-img-wrap"><img src="images/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                                <div class="team-member-img-wrap"><img src="/images/Home/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
                                 <div class="team-member-body">
                                     <div class="offset-top-20">
                                         <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Nicholas Lane</div>
@@ -293,7 +293,7 @@
                         </div>
                         <div class="owl-item">
                             <div class="team-member">
-                                <div class="team-member-img-wrap"><img src="images/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                                <div class="team-member-img-wrap"><img src="/images/Home/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
                                 <div class="team-member-body">
                                     <div class="offset-top-20">
                                         <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Ethan Dean</div>
@@ -309,7 +309,7 @@
                         </div>
                         <div class="owl-item">
                             <div class="team-member">
-                                <div class="team-member-img-wrap"><img src="images/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                                <div class="team-member-img-wrap"><img src="/images/Home/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
                                 <div class="team-member-body">
                                     <div class="offset-top-20">
                                         <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">James smith</div>
@@ -331,7 +331,7 @@
     </section>
     <section data-wow-delay=".2s" class="context-dark wow fadeIn section-parallax">
         <div data-on="false" data-md-on="true" class="rd-parallax">
-            <div data-speed="0.05" data-type="media" data-url="/images/background-06-1920x900.jpg" class="rd-parallax-layer"></div>
+            <div data-speed="0.05" data-type="media" data-url="/images/Home/background-06-1920x900.jpg" class="rd-parallax-layer"></div>
             <div data-speed="0" data-type="html" data-md-fade="false" class="rd-parallax-layer">
                 <div class="bg-overlay-inverse-md-darker">
                     <div class="shell section-80 section-lg-top-145 section-lg-bottom-295">
@@ -428,7 +428,7 @@
     </section>
     <section class="context-dark wow fadeIn section-parallax">
         <div data-on="false" data-md-on="true" class="rd-parallax">
-            <div data-speed="0.15" data-type="media" data-url="/images/background-07-1920x900.jpg" class="rd-parallax-layer"></div>
+            <div data-speed="0.15" data-type="media" data-url="/images/Home/background-07-1920x900.jpg" class="rd-parallax-layer"></div>
             <div data-speed="0" data-type="html" data-md-fade="false" class="rd-parallax-layer">
                 <div class="bg-overlay-inverse-md-darker">
                     <div class="shell section-80 section-lg-top-145 section-lg-bottom-295">
