index + tours changes

--- a/Ocean.Inside.Project/Views/Tours/ToursGrid.cshtml
+++ b/Ocean.Inside.Project/Views/Tours/ToursGrid.cshtml
@@ -1,4 +1,6 @@
-﻿<main class="page-content">
+﻿@model IEnumerable<Ocean.Inside.Project.ViewModels.TourViewModel>
+
+<main class="page-content">
     <section class="section-80 bg-wild-wand">
         <div class="shell">
             <div class="range range-xs-center">
