--- a/Ocean.Inside.Project/css/style.css
+++ b/Ocean.Inside.Project/css/style.css
@@ -1512,7 +1512,7 @@ html {
 }
 
 body {
-  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-family: "Lato", Helvetica, Arial, cursive;
   font-size: 16px;
   line-height: 1.5;
   color: #565656;
