--- a/Ocean.Inside.Project/Views/Home/Index.cshtml
+++ b/Ocean.Inside.Project/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                 }
 
             </div>
-            <div class="offset-top-50"><a href="tours-grid.html" class="btn btn-primary">View ALL TOURs</a></div>
+            <div class="offset-top-50"><a href="tours-grid.html" class="btn btn-primary">Все туры</a></div>
         </div>
     </section>
     <section data-wow-delay=".2s" class="wow fadeIn section-parallax">
