--- a/Ocean.Inside.Project/Views/Tours/Tour.cshtml
+++ b/Ocean.Inside.Project/Views/Tours/Tour.cshtml
@@ -28,7 +28,7 @@
                                 <p class="text-extra-small text-silver-chalice text-italic text-uppercase text-spacing-200">ЦЕНА</p>
                             </div>
                             <div class="offset-top-0">
-                                <p class="text-big text-ubold text-gray-base text-uppercase">@($"{Model.CurrencySymbol.CurrencyCodeToSymbol()}{Model.Price}")</p>
+                                <p class="text-big text-ubold text-gray-base text-uppercase">@($"{Model.CurrencySymbol.CurrencyCodeToSymbol()}{Model.Price:F0}")</p>
                             </div>
                         </div>
                         <div class="cell-xs-6 cell-sm-5 cell-md-3 offset-top-40 offset-md-top-0">
@@ -51,31 +51,17 @@
                 <h3>Описание тура</h3>
             </div>
             <div class="offset-top-40 text-left">
-
-                <div data-items="1" data-sm-items="2" data-md-items="3" data-stage-padding="5" data-loop="false" data-margin="30" data-mouse-drag="false" data-dots="true" data-nav="true" class="owl-carousel owl-dots-primary owl-dots-lg-reveal owl-navs-lg-veil">
-                    <div class="owl-item">
-
-                        <div class="unit unit-horizontal unit-spacing-sm">
-                            <div class="unit-left text-center">
-                                <div>
-                                    <h3 class="text-ubold text-primary line-height-1">1-3</h3>
-                                </div>
-                                <div class="offset-top-8 inset-left-10">
-                                    <p class="text-extra-small text-spacing-1000 text-gray-base text-uppercase line-height-1">day</p>
-                                </div>
-                            </div>
-                            <div class="unit-body offset-top-8">
-                                <p class="text-small text-ubold text-uppercase text-gray-base">Berlin, Warsaw, krakow</p>
-                            </div>
-                        </div>
-                        <div class="offset-top-12 inset-left-10 inset-right-10">
-                            <div>
-                                <hr class="hr bg-gallery">
-                            </div>
-                            <div class="offset-top-20">
-                                <p class="text-small text-silver-chalice">Start your Eastern Europe trip from Berlin - one of the most attractive European cities. Head out to Warsaw - the capital of Poland, where you’ll be able to take a guided tour through the city’s places of interests and museums.</p>
-                            </div>
-                        </div>
+                <div class="unit unit-horizontal unit-spacing-sm">
+                    <div class="unit-body offset-top-8">
+                        <p class="text-small text-ubold text-uppercase text-gray-base">@Model.Title, @Model.Location</p>
+                    </div>
+                </div>
+                <div class="offset-top-12 inset-left-10 inset-right-10">
+                    <div>
+                        <hr class="hr bg-gallery">
+                    </div>
+                    <div class="offset-top-20">
+                        <p class="text-small text-silver-chalice">@Model.Description</p>
                     </div>
                 </div>
             </div>
@@ -83,33 +69,28 @@
     </section>
     <section>
         <div data-photo-swipe-gallery="gallery" data-items="1" data-sm-items="2" data-md-items="3" data-lg-items="5" data-stage-padding="20" data-loop="true" data-margin="6" data-mouse-drag="false" data-dots="true" data-nav="true" class="owl-carousel owl-carusel-inset-bottom owl-nav-type-3 owl-dots-primary">
-            <div class="owl-item">
-                <a data-photo-swipe-item="" data-size="1170x780" href="images/1170x780.jpg" class="thumbnail-rayen"><span class="figure"><img width="370" height="310" src="images/370x310.jpg" alt="" class="img-responsive center-block"><span class="figcaption"><span class="icon icon-xl fa fa-search-plus text-white"></span></span></span></a>
-            </div>
-            <div class="owl-item">
-                <a data-photo-swipe-item="" data-size="1170x780" href="images/1170x780.jpg" class="thumbnail-rayen"><span class="figure"><img width="370" height="310" src="images/370x310.jpg" alt="" class="img-responsive center-block"><span class="figcaption"><span class="icon icon-xl fa fa-search-plus text-white"></span></span></span></a>
-            </div>
-            <div class="owl-item">
-                <a data-photo-swipe-item="" data-size="1170x780" href="images/1170x780.jpg" class="thumbnail-rayen"><span class="figure"><img width="370" height="310" src="images/370x310.jpg" alt="" class="img-responsive center-block"><span class="figcaption"><span class="icon icon-xl fa fa-search-plus text-white"></span></span></span></a>
-            </div>
-            <div class="owl-item">
-                <a data-photo-swipe-item="" data-size="1170x780" href="images/1170x780.jpg" class="thumbnail-rayen"><span class="figure"><img width="370" height="310" src="images/370x310.jpg" alt="" class="img-responsive center-block"><span class="figcaption"><span class="icon icon-xl fa fa-search-plus text-white"></span></span></span></a>
-            </div>
-            <div class="owl-item">
-                <a data-photo-swipe-item="" data-size="1170x780" href="images/1170x780.jpg" class="thumbnail-rayen"><span class="figure"><img width="370" height="310" src="images/370x310.jpg" alt="" class="img-responsive center-block"><span class="figcaption"><span class="icon icon-xl fa fa-search-plus text-white"></span></span></span></a>
-            </div>
-            <div class="owl-item">
-                <a data-photo-swipe-item="" data-size="1170x780" href="images/1170x780.jpg" class="thumbnail-rayen"><span class="figure"><img width="370" height="310" src="images/370x310.jpg" alt="" class="img-responsive center-block"><span class="figcaption"><span class="icon icon-xl fa fa-search-plus text-white"></span></span></span></a>
-            </div>
+            @foreach (var image in Model.Images)
+            {
+                <div class="owl-item">
+                    <a data-photo-swipe-item="" data-size="1170x780" href="@Url.Content(image.Path)" class="thumbnail-rayen">
+                        <span class="figure">
+                            <img width="370" height="310" src="@Url.Content(image.Path)" alt="" class="img-responsive center-block">
+                            <span class="figcaption">
+                                <span class="icon icon-xl fa fa-search-plus text-white"></span>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+            }
         </div>
         <div class="shell offset-top-45">
             <div>
-                <h3>Book This Tour</h3>
+                <h3>Забронировать тур</h3>
             </div>
             <div class="offset-top-0">
-                <p class="text-small text-spacing-200 text-italic">STARTING PRICE $2,500</p>
+                <p class="text-small text-spacing-200 text-italic">Начиная с @($"{Model.CurrencySymbol.CurrencyCodeToSymbol()}{Model.Price:F0}")</p>
             </div>
-            <div class="offset-top-50"><a href="pricing.html" class="btn btn-primary">Book Now</a></div>
+            <div class="offset-top-50"><a href="pricing.html" class="btn btn-primary">Позвонить сейчас</a></div>
         </div>
     </section>
     <section class="section-34 section-lg-bottom-45 offset-top-80 bg-alabaster">
