azure deployment with code first

--- a/Ocean.Inside.Project/Views/Shared/404.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/404.cshtml
@@ -25,7 +25,7 @@
                                 <div class="offset-top-15">
                                     <p class="text-small">The page requested couldn't be found - this could be due to a spelling error in the URL or a removed page.</p>
                                 </div>
-                                <div class="offset-top-30"><a href="index.html" class="btn btn-icon btn-icon-left btn-primary"><span class="icon icon-xxs mdi mdi-chevron-left"></span><span>Back to homepage</span></a></div>
+                                <div class="offset-top-30"><a href="@Url.Action("Index", "Home")" class="btn btn-icon btn-icon-left btn-primary"><span class="icon icon-xxs mdi mdi-chevron-left"></span><span>Back to homepage</span></a></div>
                             </div>
                         </div>
                     </div>
