--- a/Ocean.Inside.Project/Views/Home/_TourPartialView.cshtml
+++ b/Ocean.Inside.Project/Views/Home/_TourPartialView.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Ocean.Inside.Project.Utils
 @model Ocean.Inside.Project.ViewModels.TourViewModel
 
-<div class="cell-sm-5 cell-md-4 offset-top-30 offset-sm-top-0">
+<div class="cell-sm-5 cell-md-4 offset-top-30">
     <div data-wow-delay=".2s" class="box-offer wow bounceIn">
         <div class="box-offer-img-wrap">
             <a href="@Url.Action("Tour", "Tours", new { Model.Id })">
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div class="pull-right">
-                <div class="box-offer-price text-gray-base">@($"{Model.CurrencySymbol.CurrencyCodeToSymbol()}{Model.Price}")</div>
+                <div class="box-offer-price text-gray-base">@($"{Model.CurrencyCode.CurrencyCodeToSymbol()}{Model.Price}")</div>
             </div>
             <div class="clearfix"></div>
             <div class="offset-top-8 offset-xs-top-0">
