--- a/Ocean.Inside.Project/Views/Tours/Tour.cshtml
+++ b/Ocean.Inside.Project/Views/Tours/Tour.cshtml
@@ -28,7 +28,7 @@
                                 <p class="text-extra-small text-silver-chalice text-italic text-uppercase text-spacing-200">ЦЕНА</p>
                             </div>
                             <div class="offset-top-0">
-                                <p class="text-big text-ubold text-gray-base text-uppercase">@($"{Model.CurrencySymbol.CurrencyCodeToSymbol()}{Model.Price:F0}")</p>
+                                <p class="text-big text-ubold text-gray-base text-uppercase">@($"{Model.CurrencyCode.CurrencyCodeToSymbol()}{Model.Price:F0}")</p>
                             </div>
                         </div>
                         <div class="cell-xs-6 cell-sm-5 cell-md-3 offset-top-40 offset-md-top-0">
@@ -52,7 +52,7 @@
             </div>
             <div class="offset-top-40 text-left">
                 <div class="unit unit-horizontal unit-spacing-sm">
-                    <div class="unit-body offset-top-8">
+                    <div class="unit-body offset-top-8 text-center">
                         <p class="text-small text-ubold text-uppercase text-gray-base">@Model.Title, @Model.Location</p>
                     </div>
                 </div>
@@ -61,7 +61,24 @@
                         <hr class="hr bg-gallery">
                     </div>
                     <div class="offset-top-20">
-                        <p class="text-small text-silver-chalice">@Model.Description</p>
+                        <span class="text-bold text-silver-chalice">Отель: </span>
+                        <span class="text-small text-silver-chalice">@Model.Hotel</span>
+                    </div>
+                    <div class="offset-top-20">
+                        <span class="text-bold text-silver-chalice">Продолжительность: </span>
+                        <span class="text-small text-silver-chalice">@Model.DurationDays</span>
+                    </div>
+                    <div class="offset-top-20">
+                        <span class="text-bold text-silver-chalice">Дата начала: </span>
+                        <span class="text-small text-silver-chalice">@Model.StartDate.ToString("D")</span>
+                    </div>
+                    <div class="offset-top-20">
+                        <span class="text-bold text-silver-chalice">Дата завершения: </span>
+                        <span class="text-small text-silver-chalice">@Model.StartDate.AddDays(@Model.DurationDays).ToString("D")</span>
+                    </div>
+                    <div class="offset-top-20">
+                        <span class="text-bold text-silver-chalice">Цена: </span>
+                        <span class="text-small text-silver-chalice">@($"{Model.CurrencyCode.CurrencyCodeToSymbol()}{Model.Price:F0}")</span>
                     </div>
                 </div>
             </div>
@@ -88,7 +105,7 @@
                 <h3>Забронировать тур</h3>
             </div>
             <div class="offset-top-0">
-                <p class="text-small text-spacing-200 text-italic">Начиная с @($"{Model.CurrencySymbol.CurrencyCodeToSymbol()}{Model.Price:F0}")</p>
+                <p class="text-small text-spacing-200 text-italic">Начиная с @($"{Model.CurrencyCode.CurrencyCodeToSymbol()}{Model.Price:F0}")</p>
             </div>
             <div class="offset-top-50"><a href="pricing.html" class="btn btn-primary">Позвонить сейчас</a></div>
         </div>
